feat: trace-analytics in the UI (#131)
Adds trace-analytics in the right panel on the invocation view.

Adds CORS to endpoint
Makes use of :ajax websocket specific to firefox (interfers with CORS somehow)
Adds a :dev build for shadow-cljs
Adds an e2e test using etaoin. Runnable with lein test :integration
Closes #110