@@ -13,7 +13,9 @@
              ;; file in tmp, which will be lost on CI
              "-Dclojure.main.report=stderr"
              ;; allow termination of threads
-             "-Djdk.attach.allowAttachSelf"]
+             "-Djdk.attach.allowAttachSelf"
+             ;; for java 25
+             "--enable-native-access=ALL-UNNAMED"]
   :dependencies [[com.rpl/rama-helpers "0.10.0"]
                  [com.github.f4b6a3/uuid-creator "6.1.1"]
                  [dev.langchain4j/langchain4j
@@ -39,12 +41,16 @@
                  [ring/ring-codec "1.2.0"]
                  [com.taoensso/sente "1.20.0"]
                  [ring/ring-defaults "0.4.0"]
+                 [ring-cors/ring-cors "0.1.13"]
                  [com.cognitect/transit-clj "1.0.333"]
                  [com.cognitect/transit-cljs "0.8.280"]]
+  :test-selectors {:default     (complement :integration)
+                   :integration :integration
+                   :all         (constantly true)}
   :global-vars {*warn-on-reflection* true}
   :repositories
   [["releases"
-    {:id "maven-releases"
+    {:id  "maven-releases"
      :url "https://nexus.redplanetlabs.com/repository/maven-public-releases"}]]
   :profiles {:dev      {:resource-paths    ["test/resources/"]
                         :source-paths      ["src/clj"
@@ -62,37 +68,38 @@
                          [dev.langchain4j/langchain4j-web-search-engine-tavily
                           "1.3.0-beta9"]
                          [thheller/shadow-cljs "3.1.7"]
+                         [etaoin "1.1.43"]
+                         [clj-test-containers/clj-test-containers "0.7.4"]
+                         [org.testcontainers/testcontainers "1.20.4"]]}
                          [clj-kondo "2025.09.22"]]}
              :provided {:dependencies
                         ;; TODO: fix Rama version
                         [[com.rpl/rama "0.0.6-SNAPSHOT"]
                          [org.apache.logging.log4j/log4j-slf4j18-impl
                           "2.16.0"]]}
-             :gen {:prep-tasks []
-                   :source-paths ["scripts"]
-                   :dependencies [[comb "0.1.1"]
-                                  [org.clojure/clojure "1.12.0"]]}
-             :ui {:source-paths ["test/cljs"]
-                  :dependencies [[prismatic/schema "1.4.1"]
-                                 [com.rpl/specter "1.1.4"] ;; only cljs
-                                 [com.pitch/uix.core "1.4.3"]
-                                 [com.pitch/uix.dom "1.4.3"]
-                                 [thheller/shadow-cljs "3.1.7"]
-                                 [metosin/reitit-frontend "0.7.2"]
-                                 [metosin/reitit-malli "0.7.2"]
-                                 [net.java.dev.jna/jna "5.17.0"] ;; to fix
-                                       ;; dynlink
-                                       ;; error
-                                       ;; on arm
-                                       ;; macs
-                                 [org.clojure/clojure "1.12.0"]]}}
+             :gen      {:prep-tasks   []
+                        :source-paths ["scripts"]
+                        :dependencies [[comb "0.1.1"]
+                                       [org.clojure/clojure "1.12.0"]]}
+             :ui       {:source-paths ["test/cljs"]
+                        :dependencies [[com.rpl/specter "1.1.4"] ;; only cljs
+                                       [com.pitch/uix.core "1.4.3"]
+                                       [com.pitch/uix.dom "1.4.3"]
+                                       [thheller/shadow-cljs "3.1.7"]
+                                       [cider/cider-nrepl "0.57.0"]
+                                       [metosin/reitit-frontend "0.7.2"]
+                                       [metosin/reitit-malli "0.7.2"]
+                                       ;; to fix dynlink error on arm macs
+                                       [net.java.dev.jna/jna "5.17.0"]
+                                       [org.clojure/clojure "1.12.0"]]}
+             :test     {:jvm-opts ["-Daor.test-runner"]}}
   :codox {:source-paths ["src/clj"]
-          :metadata {:doc/format :markdown}
-          :output-path "target/doc"
-          :namespaces [com.rpl.agent-o-rama
-                       com.rpl.agent-o-rama.langchain4j
-                       com.rpl.agent-o-rama.store
-                       com.rpl.agent-o-rama.tools]}
+          :metadata     {:doc/format :markdown}
+          :output-path  "target/doc"
+          :namespaces   [com.rpl.agent-o-rama
+                         com.rpl.agent-o-rama.langchain4j
+                         com.rpl.agent-o-rama.store
+                         com.rpl.agent-o-rama.tools]}
   :plugins [[lein-exec "0.3.7"]
             [lein-codox "0.10.8"]
             [lein-doo "0.1.11"]])
